gccida/c3/ggc_alloc
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1322:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v3; // rdx 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1333:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *free_pages; // rbp 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1334:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v15; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1343:1: error: unknown type name 'page_group_0'; did you mean 'page_group'?
page_group_0 *v24; // r14 
^~~~~~~~~~~~
page_group
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:267:3: note: 'page_group' declared here
} page_group;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1344:1: error: unknown type name 'page_group_0'; did you mean 'page_group'?
page_group_0 *group; // r13 
^~~~~~~~~~~~
page_group
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:267:3: note: 'page_group' declared here
} page_group;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1346:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v27; // rbp 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1348:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v29; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1354:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 **v35; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1356:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *next; // rcx 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1360:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v41; // [rsp+18h] [rbp-40h] 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1444:23: error: expected expression
v24 = ( page_group_0 *)&v18[v16 - v23]; 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1444:9: error: use of undeclared identifier 'page_group_0'
v24 = ( page_group_0 *)&v18[v16 - v23]; 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1448:23: error: expected expression
v24 = ( page_group_0 *)( ( char *)v24 - G.pagesize); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1448:9: error: use of undeclared identifier 'page_group_0'
v24 = ( page_group_0 *)( ( char *)v24 - G.pagesize); 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1457:25: error: expected expression
group = ( page_group_0 *)( page - 32); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1457:11: error: use of undeclared identifier 'page_group_0'
group = ( page_group_0 *)( page - 32); 
          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1474:23: error: expected expression
v29 = ( page_entry_0 *)xcalloc( 1uLL, n); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1474:9: error: use of undeclared identifier 'page_entry_0'
v29 = ( page_entry_0 *)xcalloc( 1uLL, n); 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/ggc-page.c:1497:23: error: expected expression
v15 = ( page_entry_0 *)( &G + 2640); 
                      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_alloc/src/obj/ggc-page.o] Error 1
